# VoxelEngine

./: CMakeLists.txt
assets/: girl.vox  monu.vox  monu2.vox  test3.vox  test4.vox  test6.vox  test_scene.vox
include/core/: Types.h
include/cuda/: ClusterManager.h  CudaInitializer.h  CudaPhysicsEngine.h  KernelLauncher.h  SpatialHash.h  VoxelData.cuh
include/io/: VoxFileParser.h  VoxScene.h
include/physics/: PhysicsHelper.h  PhysicsManager.h
include/ui/: ControlPanel.h  GLWidget.h  InputHandler.h  MainWindow.h  MouseInputHandler.h  VoxelWindow.h
shaders/: shaders.qrc  shadow.frag  voxel.frag  voxel.geom  voxel.vert
src/: main.cpp
src/cuda/: ClusterLogic.cu  Connectivity.cu  CopyToOpenGL.cu  CudaInitializer.cu  CudaPhysicsEngine.cu  FloorCollision.cu  Gravity.cu  GravityKernel.cu  InitFromOpenGL.cu  SortVoxelsInMemory.cu  SpatialHash.cu  VoxelCollision.cu  VoxelData.cu
src/io/: VoxFileParser.cpp  VoxScene.cpp
src/physics/: PhysicsManager.cpp
src/ui/: ControlPanel.cpp  GLWidget.cpp  InputHandler.cpp  MainWindow.cpp  MouseInputHandler.cpp  VoxelWindow.cpp
